import carteAnimal.*;
import gameplay.jeu.*;
import typeCarte.*;

public class Main
{
    public static void main(String[] args) throws Exception {
        Jeu jeu = new Jeu();
        jeu.demarrerJeu();
    }
}
