package carteAnimal;

import typeCarte.Animal;

public class Corbeau extends Animal {
    public Corbeau(){
        super("Corbeau", 2, 3, 2, 0, true);
    }
}
