package carteAnimal;

import typeCarte.Animal;

public class Ecureuil extends Animal {
    public Ecureuil(){
        super("Ecureuil", 0, 1, 0, 0, false);
    }
}
