package carteAnimal;

import typeCarte.Animal;

public class Punaise extends Animal {
    public Punaise(){
        super("Punaise", 1, 2, 0, 2, false);
    }
}
