package obstacles;


import typeCarte.Obstacle;

public class Rocher extends Obstacle {
    public Rocher(){
        super(5,"rocher");
    }


}
