package typeCarte;

public abstract class Obstacle extends Carte {
    public Obstacle (int pointDeVie, String nom) {
        super(nom, pointDeVie);
    }
}
